testsuite/tests/interpreter_errors/invalid_at_object_literal/test.out
script.lkql:1:9: error: Multiple keys with the same name in the object: "a"
  1 | val x = @{a: "Hello", b: 50, a}
    |         ^^^^^^^^^^^^^^^^^^^^^^^
error: Errors during analysis
